# writing-worksheet

./: .gitignore  ACCEPTANCE_CHECKLIST.md  AGENTS.md  ASSETS.md  README.md  RENDERING_PARAMS.md  SPEC.md  TUNING.md  YAML_SCHEMA.md  pyproject.toml
examples/: example-full.yaml  example-minimal.yaml  example-wrap.yaml
src/worksheet_gen/: cli.py  config.py  load.py  render.py  schema.py  web.py
src/worksheet_gen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_layout.py  test_smoke.py  test_web_smoke.py  test_wrap.py
